tests/negative/neg_pr1113a_duplicate_variant.safe
package neg_pr1113a_duplicate_variant

   type shape is circle (radius : integer) or circle (diameter : integer);
